--- a/index.html
+++ b/index.html
@@ -6,13 +6,51 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/reset.css" />
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <nav class="nav-bar">
+      <img src="/images/spotify-logo.png" alt="Spotify Logo" id="logo" />
+      <ul>
+        <li><a href="#">Premium</a></li>
+        <li><a href="#">Discover</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Download</a></li>
+      </ul>
+    </nav>
+    <header class="header-background">
+      <div class="header-text">
+        <h1>Music for everyone.</h1>
+        <p>
+          Spotify is now free on mobile, tablet and computer. <br />
+          Listen to the right music, wherever you are.
+        </p>
+      </div>
+    </header>
+    <main>
+      <section class="whats-on-spotify">
+        <h2>What’s on Spotify?</h2>
+        <article class="flex">
+          <div>
+            <h3>Millions of Songs</h3>
+            <p>There are millions of songs on Spotify</p>
+          </div>
+          <div>
+            <h3>HD Music</h3>
+            <p>Listen to music as if you were listening live</p>
+          </div>
+          <div>
+            <h3>Stream Everywhere</h3>
+            <p>Stream music on your smartphone, tablet or computer</p>
+          </div>
+        </article>
+      </section>
+      <section></section>
+    </main>
+    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just
+    search and hit play. Browse Check out the latest charts, brand new releases
+    and great playlists for right now. Discover Enjoy new music every Monday
+    with your own personal playlist. Or sit back and enjoy Radio.
   </body>
 </html>
