style the whats-on-spotify section

--- a/index.html
+++ b/index.html
@@ -29,19 +29,22 @@
       </div>
     </header>
     <main>
-      <section class="whats-on-spotify">
-        <h2>What’s on Spotify?</h2>
+      <section id="whats-on-spotify">
+        <h2 class="centered">What’s on Spotify?</h2>
         <article class="flex">
-          <div>
-            <h3>Millions of Songs</h3>
+          <div class="flex-column">
+            <img src="./images/music-icon.png" alt="Music icon" />
+            <h3><span class="green-color">Millions of Songs</span></h3>
             <p>There are millions of songs on Spotify</p>
           </div>
-          <div>
-            <h3>HD Music</h3>
+          <div class="flex-column">
+            <img src="/images/high-quality-icon.png" alt="High quality icon" />
+            <h3><span class="green-color">HD Music</span></h3>
             <p>Listen to music as if you were listening live</p>
           </div>
-          <div>
-            <h3>Stream Everywhere</h3>
+          <div class="flex-column">
+            <img src="/images/devices-icon.png" alt="Devices icon" />
+            <h3><span class="green-color">Stream Everywhere</span></h3>
             <p>Stream music on your smartphone, tablet or computer</p>
           </div>
         </article>
