--- a/index.html
+++ b/index.html
@@ -30,30 +30,60 @@
     </header>
     <main>
       <section id="whats-on-spotify">
-        <h2 class="centered">What’s on Spotify?</h2>
+        <h2 class="centered"><span>What’s on Spotify?</span></h2>
         <article class="flex">
           <div class="flex-column">
             <img src="./images/music-icon.png" alt="Music icon" />
             <h3><span class="green-color">Millions of Songs</span></h3>
-            <p>There are millions of songs on Spotify</p>
+            <p>
+              There are millions of <br />
+              songs on Spotify
+            </p>
           </div>
           <div class="flex-column">
             <img src="/images/high-quality-icon.png" alt="High quality icon" />
             <h3><span class="green-color">HD Music</span></h3>
-            <p>Listen to music as if you were listening live</p>
+            <p>
+              Listen to music as if you <br />
+              were listening live
+            </p>
           </div>
           <div class="flex-column">
             <img src="/images/devices-icon.png" alt="Devices icon" />
             <h3><span class="green-color">Stream Everywhere</span></h3>
-            <p>Stream music on your smartphone, tablet or computer</p>
+            <p>
+              Stream music on your smartphone, tablet or
+              computer
+            </p>
           </div>
         </article>
       </section>
-      <section></section>
+      <section id="what-you-can-do">
+        <h2><span>It’s as yeezy as Kanye West.</span></h2>
+        <section class="what-you-can-do-content">
+          <article class="flex-app">
+            <div>
+              <h3>Search</h3>
+              <p>
+                Know what you want to listen to?<br />
+                Just search and hit play.
+              </p>
+              <h3>Browse</h3>
+              <p>
+                Check out the latest charts,<br />
+                brand new releases and great <br />
+                playlists for right now.
+              </p>
+              <h3>Discover</h3>
+              <p>
+                Enjoy new music every Monday <br />
+                with your own personal playlist <br />
+                Or sit back and enjoy Radio.
+              </p>
+            </div>
+              <div><img src="/images/spotify-app.jpg" alt="Spotify app image" /></div>         </article>
+        </section>
+      </section>
     </main>
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just
-    search and hit play. Browse Check out the latest charts, brand new releases
-    and great playlists for right now. Discover Enjoy new music every Monday
-    with your own personal playlist. Or sit back and enjoy Radio.
   </body>
 </html>
